# composefs

./: .clang-format  .clang-format-ignore  .clang-format-include  .gitignore  CODE-OF-CONDUCT.md  CONTRIBUTING.md  COPYING  COPYING.GPL-2.0-only  Cargo.toml  MAINTAINERS.md  Makefile.am  README.md  composefs.cil  composefs.pc.in  composefs.spec.in  configure.ac  meson.build  meson_options.txt
.github/workflows/: builds.yaml  ci-bootc.yml  rust.yml  test.yaml
ci/: Containerfile.c9s-bootc
examples/: .gitignore  Makefile.am  composefs-from-json.c  ostree-convert-commit.py  read-file.c  read-file.h  test-checksums.sh
examples/test-assets/: cs9-x86_64-minimal.json.gz.sha256_erofs
fuzzing/: .gitignore  Makefile  main.c
hacking/: Makefile  installdeps.sh
hacking/clang-format/: .clang-format  Dockerfile  Makefile  run-tests.sh
kernel/: .gitignore  Makefile  cfs-fuzzing.h  cfs-internals.h  cfs-reader.c  cfs-reader.h  cfs-verity.h  cfs.c  cfs.h  lcfs-fuzzing.h  lcfs-reader.c  lcfs-reader.h  lcfs-verity.h  lcfs.h
kernel/Documentation/filesystems/: composefs.rst
libcomposefs/: .gitignore  Makefile-lib.am  Makefile.am  bitrotate.h  erofs_fs_wrapper.h  hash.c  hash.h  lcfs-cfs.h  lcfs-erofs-internal.h  lcfs-erofs.h  lcfs-fsverity.c  lcfs-fsverity.h  lcfs-internal.h  lcfs-mount.c  lcfs-mount.h  lcfs-utils.c  lcfs-utils.h  lcfs-writer-cfs.c  lcfs-writer-erofs.c  lcfs-writer.c  lcfs-writer.h  lcfs.h  meson.build  xalloc-oversized.h
man/: composefs-dump.md  composefs-info.md  meson.build  mkcomposefs.md  mount.composefs.md
rust/composefs/: Cargo.toml  README.md
rust/composefs-core/: Cargo.toml
rust/composefs-core/src/: dumpfile.rs  fsverity.rs  lib.rs  mkcomposefs.rs
rust/composefs-oci/: Cargo.toml  README.md
rust/composefs-oci/src/: fileutils.rs  lib.rs  pull.rs  repo.rs
rust/composefs-sys/: Cargo.toml  README.md  build.rs
rust/composefs-sys/src/: lib.rs
rust/composefs/examples/: cfs-dumpfile2tar.rs
rust/composefs/src/: dumpfile.rs  fsverity.rs  lib.rs  mkcomposefs.rs
rust/src/: dumpfile.rs  lib.rs  mkcomposefs.rs
tests/: .gitignore  Makefile.am  README.md  build_image.sh  composefs.mpp.yml  dumpdir  gendir  integration.sh  meson.build  runkernel.sh  test-checksums.sh  test-dump-filtered.sh  test-lcfs.c  test-lib.sh  test-random-fuse.sh  test-should-fail.sh  test-units.sh
tests/assets/: bigfile-xattr.dump  bigfile-xattr.dump.sha256  bigfile.dump  bigfile.dump.sha256  config-with-hard-link.dump.gz.sha256  config.json.gz.sha256_erofs  cs9-x86_64-developer.dump.gz.sha256  cs9-x86_64-minimal.dump.gz.sha256  f36-x86_64-silverblue.dump.gz.sha256  honggfuzz-bigfile-with-acl.dump  honggfuzz-bigfile-with-acl.dump.sha256  honggfuzz-chardev-nonzero-size.dump  honggfuzz-chardev-nonzero-size.dump.sha256  honggfuzz-long-symlink.dump  honggfuzz-long-symlink.dump.sha256  honggfuzz-long-xattr.dump.gz.sha256  honggfuzz-longlink-unterminated.dump  honggfuzz-longlink-unterminated.dump.sha256  honggfuzz-write-inode-data.dump.sha256  longlink.dump  longlink.dump.sha256  no-newline.dump  no-newline.dump.sha256  should-fail-big-inline.dump  should-fail-dir-hardlink.dump  should-fail-dot-name.dump  should-fail-dotdot-name.dump  should-fail-empty-link-name.dump  should-fail-empty-name.dump  should-fail-empty-xattr-key.dump  should-fail-honggfuzz-long-xattr.dump  should-fail-long-link.dump  should-fail-long-xattr-key.dump  should-fail-long-xattr-value.dump  should-fail-no-ftype.dump  should-fail-self-hardlink.dump  should-fail-too-big.dump  special.dump  special.dump.sha256  special.json  (+2 more)
tests/fuzzing/: run.sh
tests/fuzzing/data/: SIGSEGV.PC.432623.STACK.1a9c9e1981.CODE.1.ADDR.0.INSTR.movsbl_(%rax),%eax.fuzz  SIGSEGV.PC.435caa.STACK.18ea55ecb1.CODE.1.ADDR.20.INSTR.mov____0x20(%rax),%rax.fuzz  alpine  busybox  dot-root  dump-example  fedora
tools/: .gitignore  Makefile.am  cfs-fuse.c  composefs-dump.c  composefs-from-json.c  composefs-info.c  configure.ac  dump.c  meson.build  mkcomposefs-sandbox.c  mkcomposefs-sandbox.h  mkcomposefs.c  mountcomposefs.c  read-file.c  sandbox.c  sandbox.h  test-checksums.sh  writer-json.c  writer.c
tools/lcfs/: bitrotate.h  hash.h  lcfs-writer.c  lcfs-writer.h  lcfs.h
tools/test-assets/: config-with-hard-link.json.gz.sha256_composefs  config-with-hard-link.json.gz.sha256_erofs  config.json.gz.sha256_composefs  config.json.gz.sha256_erofs  config.json.sha256_erofs  cs9-x86_64-developer.json.gz.sha256_composefs  cs9-x86_64-developer.json.gz.sha256_erofs  cs9-x86_64-minimal.json.gz.sha256_composefs  f36-x86_64-silverblue.json.gz.sha256_composefs  f36-x86_64-silverblue.json.gz.sha256_erofs
