[workspace]
members = ["rust/composefs", "rust/composefs-sys"]
resolver = "2"

[profile.dev]
opt-level = 1 # No optimizations are too slow for us.

[profile.release]
lto = "thin"
# No need to support unwinding
panic = "abort"
# We assume we're being delivered via e.g. RPM which supports split debuginfo
debug = true

[profile.releaselto]
codegen-units = 1
inherits = "release"
lto = "yes"
