[package]
name = "composefs"
version = "0.1.0"
edition = "2021"
description = "Rust composefs"
keywords = ["composefs", "oci", "opencontainers", "docker", "podman"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/containers/composefs"
rust-version = "1.70.0"

include = [
    "/COPYING",
    "/README.md",
    "/rust/composefs-core/**",
]

[lib]
name = "composefs"
path = "src/lib.rs"

[features]
# Depend on 1.0.4 APIs
v1_0_4 = ["composefs-sys/v1_0_4"]

[dependencies]
anyhow = "1.0"
libc = "0.2"
composefs-sys = { path = "../composefs-sys" }

[dev-dependencies]
tar = "0.4.38"
tempfile = "3.2.0"