[package]
name = "composefs-sys"
description = "Rust library wrapping the libcomposefs C library"
keywords = ["composefs"]
version = "0.1.1"
edition = "2021"
links = "composefs"
build = "build.rs"
license = "MIT OR Apache-2.0"
readme = "README.md"

[package.metadata.docs.rs]
features = ["dox"]

[package.metadata.system-deps.composefs]
name = "composefs"
version = "1"

[features]
dox = []
# Depend on 1.0.4 APIs
v1_0_4 = []

[build-dependencies]
system-deps = "6"

[dev-dependencies]
anyhow = "1"
tempfile = "3"
